test/core/errors/offsets_error/zs/string_error.zs
package string_error;

struct StringError
{
    string offset;
offset:
    uint32 values[];
};
